src/App.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');

:root{
  --primary-white: #fff;
  --primary-orange: #f9ab00;
  --primary-dark: rgba(255,255,255,0);
  --primary-red: #ef4035;
  --primary-hover-red: #f33501;
  --primary-gray: #f8f8f8;
}

body{
  font-family: 'Roboto Condensed', sans-serif !important;
}
/***************************** NAVBAR *************************/
.logo{
  width: 16.25rem;
}
/***************************** MENU LINKS *********************/
nav a.nav-link {
  font-size: 0.9rem;
  letter-spacing: 0.0375rem;
  cursor:pointer;
}
nav ul li {
  text-transform: uppercase;
}
.navbar-nav > li > a {
  margin-right: 0.75rem;
  margin-left: 0.75rem;
  color: var(--primary-white) !important;
  border-top: 0.1875rem solid var(--primary-dark);
}
.navbar-brand {
  max-width: 17.25rem;
  padding: 0 !important;
  height: 6rem;
}
@media(max-width: 768px){
  .navbar-brand {
    width: 7rem;
  }
}
.navbar-nav > li > a.active, .navbar-nav > li > a.active:focus {
  border-top: 0.1875rem solid var(--primary-orange);
}
.navbar-nav > li > a:hover {
  border-top: 0.1875rem solid var(--primary-orange);
}

/***************************** HEADER *************************/
.header-wrapper{
  position: relative;
  background: url(bg.jpg) no-repeat;
  background-size: cover;
  height: 95vh;
  margin-top:4rem;

}
.main-info {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;  
}
.main-info h1{
  color: var(--primary-orange);
  text-transform: uppercase;
}

.typed-text{
  font-size: 2rem;
  color: var(--primary-white);
}
@media(max-width: 768px){
  .main-info h1{
    font-size: 1.5rem !important;
  }
  .typed-text{
    font-size: 1.4rem !important;
  }
}
.btn-main-offer{
  border: 1px solid var(--primary-red);
  text-transform: uppercase;
  border-radius: 0;
  padding: 0.625rem 0.75rem 0.75rem 0.75rem;
  color: var(--primary-white);
  margin:2rem;
  cursor: pointer;
}
.btn-main-offer:hover{
  text-decoration: none;
  color: var(--primary-white);
  background-color: var(--primary-hover-red);
  transition: .2s ease-in-out;
}
.tsparticles-canvas-el {
  position: absolute;
  height: 100vh;
  width: 100vh;
}
@media(max-width: 768px){
  .particles-canvas{
    display: none;
  }
}
/************************* ABOUT ME *******************************************/
.about-section {
  max-width: 968px !important;
}
@media(max-width: 968px){
  .about-section{
    padding: 0 30px !important;
  }
}
.about-section .col-md-6{
  margin-top: 4rem;
}
.about-section h1{
  color: var(--primary-orange);
  text-transform: uppercase;
}
.about-section img.photo {
  display: block;
  margin: 0 auto;
  border-radius: 50%;
  width: 260px;
}
.about-section .wrapper-photo{
  max-width: 260px;
  padding: 5px;
  border: 2px solid var(--primary-orange);
  border-radius: 50%;
  margin: auto;
}
/******************************** PORTFOLIO ****************************************/
.portfolio-section {
  margin-top: 50px;
	display: flex;
	flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;  
  background-color: var(--primary-gray);  
  align-items: start;
  padding-bottom: 100px;
}
.portfolio-section h1 {
  color: var(--primary-orange);
  text-transform: uppercase;
  width: 100%;
  text-align: center;
  line-height: 5;
}
.portfolio-section .item {
	/* flex: 1 0 calc(25% - 10px); */
  box-sizing: border-box;
  margin: 0px 20px 50px 20px;  
  padding: 5px;
  border: 2px solid var(--primary-orange);
}
/***************************** CONTACT ME***********************************************************/

.contact-section{
  background-color: #343A40;
  min-height: 95vh;
  padding: 0 20px;
}
.contact-section h1 {
  color: var(--primary-orange);
  text-transform: uppercase;
  width: 100%;
  text-align: center;
  padding-top: 90px;
  padding-bottom: 30px;
}
.contact-section .subtitle {
  color: var(--primary-white);
  width: 100%;
  text-align: center;
  font-size: 1.2 rem;
  margin-bottom: 100px;
}
section {
  max-width: 968px;
  margin: 0 auto;
}
.contact-section form .row {
  margin-bottom: 20px;
}
.contact-section .input-text{
  color: var(--primary-orange);
  background: transparent;
  border-width: 0 0 2px 0;
  border-color: var(--primary-gray);
  width: 100%;
  outline: none;
  padding: 7px 0;
}
.contact-section .input-text:focus {
  outline: none;
}
input:-webkit-autofill,
input:-webkit-autofill:hover, 
input:-webkit-autofill:focus, 
input:-webkit-autofill:active,
textarea:-webkit-autofill,
textarea:-webkit-autofill:hover,
textarea:-webkit-autofill:focus,
select:-webkit-autofill,
select:-webkit-autofill:hover,
select:-webkit-autofill:focus
{
  transition: background-color 5000s ease-in-out 0s;
  -webkit-text-fill-color: var(--primary-orange) !important;
}
.contact-section .md-form{
  position: relative;
}
.contact-section .focus-border {
  position: absolute;
  bottom: 0;
  left: 0px;
  height: 2px;
  background-color: var(--primary-orange);
  width: 0;
  transition: .5s;  
}
.contact-section .input-text:focus ~ span {
  width: 100%;  
}
.contact-section .md-textarea{
  display: block;
  min-height: 160px !important; 
  max-width:100%;
}
.contact-section .btn-contact{
  display: inline-block;
  width: 50%;
  text-align: center;
  border: 1px solid var(--primary-red);
  text-transform: uppercase;
  border-radius: 0;
  padding: 0.625rem 0.75rem 0.75rem 0.75rem;
  color: var(--primary-white);
  background: transparent;
  cursor: pointer;
}
.contact-section .btn-contact:hover{
  text-decoration: none;
  background-color: var(--primary-hover-red);
  transition: .2s ease-in-out;
}
@media(max-width: 768px){
  .contact-section .btn-contact{
    display: inline;
  }
}

